--- a/CasAuthenticationSample/project.json
+++ b/CasAuthenticationSample/project.json
@@ -5,6 +5,7 @@
   },
 
   "dependencies": {
+    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-*",
     "CasAuthenticationMiddleware": "1.0.0-*",
     "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
