--- a/src/CasAuthenticationMiddleware/project.json
+++ b/src/CasAuthenticationMiddleware/project.json
@@ -9,7 +9,7 @@
     "Microsoft.AspNet.Authentication": "1.0.0-*"
   },
   "frameworks": {
-    "dnx451": { },
-    "dnxcore50": { }
+    "net451": { },
+    "dotnet5.4": { }
   }
 }
