--- a/src/CasAuthenticationMiddleware/CasAuthenticationMiddleware.nuspec
+++ b/src/CasAuthenticationMiddleware/CasAuthenticationMiddleware.nuspec
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
+    <id>CasAuthenticationMiddleware</id>
     <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <title>Cas Authentication Middleware </title>
+    <authors>Scott Kirkland</authors>
+    <owners>Scott Kirkland</owners>
     <licenseUrl>https://raw.githubusercontent.com/ucdavis/CasAuthenticationMiddleware/master/LICENSE.txt</licenseUrl>
     <projectUrl>https://github.com/ucdavis/CasAuthenticationMiddleware</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
+    <description>Cas Authentication Middleware</description>
     <releaseNotes>Cas Authentication Middleware for .NET Core</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>Cas Authentication Middleware Core ASPNETCore</tags>
